; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_luma-key-filter.c_luma_key_defaults.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_luma-key-filter.c_luma_key_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SETTING_LUMA_MAX = common dso_local global i32 0, align 4
@SETTING_LUMA_MIN = common dso_local global i32 0, align 4
@SETTING_LUMA_MAX_SMOOTH = common dso_local global i32 0, align 4
@SETTING_LUMA_MIN_SMOOTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @luma_key_defaults to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @luma_key_defaults(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @SETTING_LUMA_MAX, align 4
  %5 = call i32 @obs_data_set_default_double(i32* %3, i32 %4, double 1.000000e+00)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @SETTING_LUMA_MIN, align 4
  %8 = call i32 @obs_data_set_default_double(i32* %6, i32 %7, double 0.000000e+00)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @SETTING_LUMA_MAX_SMOOTH, align 4
  %11 = call i32 @obs_data_set_default_double(i32* %9, i32 %10, double 0.000000e+00)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @SETTING_LUMA_MIN_SMOOTH, align 4
  %14 = call i32 @obs_data_set_default_double(i32* %12, i32 %13, double 0.000000e+00)
  ret void
}

declare dso_local i32 @obs_data_set_default_double(i32*, i32, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
